Fixed Search Button Mobile Issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,13 +38,10 @@
         text-align: center;
     }
 }
-.searchBtn{
-    position: absolute;
-    top:45%;
-    left:50%;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
+.searchBtnDiv{
+   
+    text-align: center;
+    
 }
 #mandatory-msg{
     visibility: hidden;
